# BPHOComputationalChallenge

./: .gitignore  CMakeLists.txt  Extension.tex  Library.bib  README.md  bibfile.bib  main.tex  tasks.tex
Writeup/: main.tex
resources/: imgui.ini
src/: CMakeLists.txt  main.cpp
vendors/: CMakeLists.txt
vendors/imgui-sfml/: CMakeLists.txt
vendors/sfml/: CMakeLists.txt
